# lastback

./: .dockerignore  .env.example  .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  run.sh
.github/draft-workflows/: linters.yml
.github/workflows/: linters.yml  production.yml  staging.yml
aws/production/: migration-override.json  service.json  task.json  workflow.sh
aws/staging/: migration-override.json  service.json  task.json  workflow.sh
backend/: settings.py  urls.py
backend/accounts/: apps.py  models.py  push_notifications.py  serializers.py  urls.py  views.py
backend/accounts/fixtures/: accounts.json
backend/accounts/migrations/: 0001_initial.py  0002_user_role.py  0003_auto_20210514_2245.py
backend/authentication/: apps.py  google.py  register.py  serializers.py  urls.py  views.py
backend/common/: apps.py  metaclasses.py  models.py  queries.py  urls.py  versioning.py  views.py
backend/contacts/: apps.py
backend/docs/: apps.py  responses.py  urls.py  views.py
backend/example/: apps.py  urls.py  views.py
backend/forecast/: apps.py  urls.py  views.py
backend/operations/: apps.py  models.py  paginations.py  serializers.py  urls.py  views.py
backend/users/: models.py  serializers.py
docs/: openapi.json
scripts/: staging-release.sh
scripts/create_endpoints/: kpis.csv  script_kpis.py  script_service_indicators.py  service-indicators.csv
scripts/fixture_generators/: kpis.py  kpis2.py  service_indicators.py  service_indicators2.py
(+38 files in other folders)
